# rategauge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: models.yaml
data/catalog/: README.md  documents.csv  traps.csv
data/golden/: README.md  cbpol_events.csv
docs/: DESIGN.md  eval-methodology.md
eval/: cost_ledger.csv
eval/batches/: batch_6a4d9a508fc48190bd6e43e90f965936.json  batch_6a4dd9f4badc81908d7795d818a4404e.json  batch_6a4dda09f0048190bfc385a9c77de189.json  batch_6a5441da466c8190bf0b3044e829f116.json  batch_6a5441e4d61881908b7ec6d1028f4efa.json  msgbatch_01Gspr5aYUvUc8LpdweHhC14.json  msgbatch_01H2CimB9KZz2mNx8QUMNhXo.json  msgbatch_01Kd9BGdZq1rhdePm3Yo4YVH.json
eval/graded/: claude-haiku-4-5__v001__s1.jsonl  gpt-5.4-mini__v001__s1.jsonl  gpt-5.4-nano__v001__s1.jsonl
eval/runs/: claude-haiku-4-5__v001__s1.jsonl  gpt-5.4-mini__v001__s1.jsonl  gpt-5.4-nano__v001__s1.jsonl
eval/scorecards/: claude-haiku-4-5__v001__s1.json  gpt-5.4-mini__v001__s1.json  gpt-5.4-nano__v001__s1.json
src/rategauge/: __init__.py  cli.py  config.py  corpus.py  http.py  schema.py
src/rategauge/evalsuite/: __init__.py  grader.py  metrics.py
src/rategauge/extract/: __init__.py  batch.py  clients.py  runner.py
src/rategauge/extract/prompts/: v001.md
src/rategauge/goldenset/: __init__.py  cbpol.py
src/rategauge/serve/: api.py  tracing.py
src/rategauge/sources/: __init__.py  common.py  ecb.py  fed.py
tests/: test_batch.py  test_cbpol.py  test_cli.py  test_evalsuite.py  test_extract.py  test_schema.py  test_serve.py  test_smoke.py  test_sources_ecb.py  test_sources_fed.py
